--- a/app/templates/list_agents.html
+++ b/app/templates/list_agents.html
@@ -1,6 +1,9 @@
 <html>
+  <!-- HTML file for displaying a list of all current end points on the running system -->
+
   <head>
     <title>OrchREST-Agents</title>
+    <!-- Import Bootstrap, AJAX and JQUery -->
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -11,36 +14,211 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/orchestrator.css') }}"
     />
+    <link
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+      rel="stylesheet"
+      integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+      crossorigin="anonymous"
+    />
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+      integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+      integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Link JavaScript file to handle back end connections -->
+    <script src="{{ url_for('static', filename='js/edit_agent.js') }}"></script>
   </head>
+
   <body>
-    <h1 align="center">List of current active agents</h1>
-    <div class="container">
+    <!-- Navbar shows interactive site map -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Orchestrator:</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/"
+              >Home<span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/agents/">Agents</a>
+          </li>
+          <!-- Navbar contains a refresh button -->
+          <li>
+            <button class="btn btn-info" onClick="window.location.reload()">
+              <i class="fa fa-refresh"></i> Refresh
+            </button>
+          </li>
+        </ul>
+        <!-- Navbar contains current page information -->
+        <span class="navbar-text">
+          Displaying all current available end points
+        </span>
+      </div>
+    </nav>
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-sm-8 offset-sm-2">
+        <div class="col-sm-10 offset-sm-1">
+          <!-- Agents listed in table -->
           <table class="agents_table table table-striped table-bordered">
             <thead>
               <tr>
                 <th>Agent ID</th>
-                <th>Active Jobs</th>
+                <th>Requests</th>
                 <th>Last Run</th>
+                <th>Response Code</th>
+                <th>Status</th>
                 <th>Next Run</th>
                 <th>Functions</th>
               </tr>
             </thead>
             <tbody>
+              <!-- First line of table used for creation of new Agents -->
+              <td>
+                <input
+                  type="text"
+                  name="id"
+                  value=""
+                  class="form-control inline-edit"
+                />
+              </td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td>
+                <!-- Button runs jQuery script to PUT request back to this page -->
+                <button
+                  onclick="createButton(this)"
+                  class="btn table-btn create-btn btn-success"
+                  type="button"
+                  data-toggle="tooltip"
+                  title="New End Point"
+                  data-placement="top"
+                >
+                  <i class="fa fa-plus"></i>
+                </button>
+              </td>
               {% for agent in agents %}
               <tr>
-                <th>{{ agent.id }}</th>
-                <td>{{ agent.jobs | length }}</td>
-                <td>{{ agent.lastRun }}</td>
-                <td>{{ agent.nextRun }}</td>
                 <td>
-                  <a href="/agents/{{ agent.id }}" class="btn btn-warning"
-                    >Edit</a
+                  <input
+                    type="text"
+                    name="id"
+                    value="{{ agent.id }}"
+                    readonly
+                    class="form-control-plaintext"
+                  />
+                </td>
+                <td>
+                  <!-- Button runs jQuery script to POST request back to this page -->
+                  <button
+                    onclick="manualRequestButton(this, 1)"
+                    class="btn table-btn btn-secondary"
+                    type="button"
+                    data-toggle="tooltip"
+                    title="Test"
+                    data-placement="top"
                   >
-                  <a href="/agents/{{ agent.id }}" class="btn btn-danger"
-                    >Delete</a
+                    Test
+                  </button>
+                  <!-- Button runs jQuery script to POST request back to this page -->
+                  <button
+                    onclick="manualRequestButton(this, 2)"
+                    class="btn table-btn btn-secondary"
+                    type="button"
+                    data-toggle="tooltip"
+                    title="Cancel"
+                    data-placement="top"
                   >
+                    Cancel
+                  </button>
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    name="lastRun"
+                    value="{{ agent.lastRun }}"
+                    readonly
+                    class="form-control-plaintext"
+                  />
+                </td>
+                <td>
+                  <input
+                    type="text"
+                    name="response"
+                    value="{{ agent.response }}"
+                    readonly
+                    class="form-control-plaintext"
+                  />
+                </td>
+                {% if agent.isRunning == True %}
+                <td>
+                  <input
+                    type="text"
+                    name="isRunning"
+                    value="Running"
+                    readonly
+                    class="form-control-plaintext"
+                  />
+                </td>
+                {% else %}
+                <td>
+                  <input
+                    type="text"
+                    name="isRunning"
+                    value="Waiting"
+                    readonly
+                    class="form-control-plaintext"
+                  />
+                </td>
+                {% endif %}
+                <td>
+                  <input
+                    type="text"
+                    name="nextRun"
+                    value="{{ agent.nextRun }}"
+                    readonly
+                    class="form-control-plaintext"
+                  />
+                </td>
+                <td>
+                  <button
+                    onclick="deleteButton(this)"
+                    class="btn table-btn btn-danger"
+                    type="button"
+                    data-toggle="tooltip"
+                    title="Delete"
+                    data-placement="top"
+                  >
+                    <i class="fa fa-times"></i>
+                  </button>
+                  <a
+                    href="/agents/{{ agent.id }}"
+                    class="btn table-btn btn-primary"
+                    data-toggle="tooltip"
+                    title="Edit Schedule"
+                    data-placement="top"
+                    ><i class="fa fa-edit"></i
+                  ></a>
                 </td>
               </tr>
               {% endfor %}
@@ -49,5 +227,10 @@
         </div>
       </div>
     </div>
+    <script>
+      $(document).ready(function() {
+        $('[data-toggle="tooltip"]').tooltip();
+      });
+    </script>
   </body>
 </html>
