--- a/app/templates/root.html
+++ b/app/templates/root.html
@@ -1,8 +1,45 @@
 <html>
   <head>
-    <title>orchREST-Root</title>
+    <title>OrchREST-Agents</title>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
+      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/orchestrator.css') }}"
+    />
   </head>
   <body>
-    <h1>HTTP Request Orchestrator/Scheduler</h1>
-  </body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">Orchestrator:</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarText"
+        aria-controls="navbarText"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarText">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="/"
+              >Home<span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/agents/">Agents</a>
+          </li>
+        </ul>
+        <span class="navbar-text">
+          Schedule and observe HTTP requests to end points
+        </span>
+      </div>
+    </nav>
 </html>
